--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <base href="/">
-    <title>Acme Product Management</title>
+    <title>Frenzie Product Management</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <pm-app>Loading App...</pm-app>
+    <pm-app>Loading App.....</pm-app>
 </body>
 
 </html>
